--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -2,3 +2,23 @@
 #carouselExampleControls{
     margin: 2% 5% 7% 5%;
   }
+
+  .card {
+    padding: 20px;
+    margin: 50px;
+    border-radius: 1em;
+    
+}
+
+.card img {
+    width: 150px;
+    height: 150px;
+    margin-bottom: 15px;
+    transition: 0.3s ease-in-out;
+    border-radius: 1em;
+}
+
+.card img:hover {
+    transition: 0.3s ease-in-out;
+    transform: scale(1.5);
+}
