--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -20,3 +20,26 @@
       <span class="visually-hidden">Next</span>
     </button>
   </div>
+  <div class="container ">
+    <div class="row">
+
+        <div class="card col-md-3" >
+            <div style="text-align: center;">
+                <img src="https://localhost:44305/Photos/All.png">
+                <h5>All product</h5>
+
+            </div>
+        </div>
+
+        <ng-container *ngFor="let item of CategoryList "   >
+            <div class="card  col-md-3 bg-light" style="width:250px;position: relative;  align-self: start;" >
+                <div style="text-align: center;">
+                    <img src="{{item.image}}">
+                    <h5>{{item.title}}</h5>
+                </div>
+            </div>
+        </ng-container>
+
+    </div>
+
+</div>
