--- a/src/app/landing-nav/landing-nav.component.html
+++ b/src/app/landing-nav/landing-nav.component.html
@@ -19,9 +19,9 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/customer_login">Customer</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Farmer</a></li>
+              <li><a class="dropdown-item" href="/farmer_login">Farmer</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Delivery</a></li>
+              <li><a class="dropdown-item" href="/courier_login">Delivery</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
